# jufDea

./: .gitignore  GUI.py  README_AI.md  RUN-jufDea.bat  Settings.py  SideImages.py  example.json  layout.json  lol.py  pdf_utils.py  pyproject.toml  readme.md
GUI/: layout.ui  sidePicturesWidget.ui
GUI/assets/: SchoolKX_new_SemiBold.pkl
src/jufDea/: __init__.py  pdf_utils.py
src/jufDea/GUI/: __init__.py
